syntax = "proto3";              // 协议版本
package pb;                     // 包名
option csharp_namespace="Pb";   // C#命名控件

// 同步玩家ID
message SyncPlayerID
{
    int32 playerID = 1; // 服务器新生成玩家ID
}

// 位置信息
message Position
{
    float x = 1;
    float y = 2;
    float z = 3;
    float v = 4;
}

// 广播消息
message BroadCast
{
    int32 playerID = 1;
    int32 MessageType = 2; // Tp: 1 世界聊天, 2 坐标, 3 动作, 4 移动之后坐标信息更新
    oneof Data {
        string Content = 3;   // 玩家的聊天信息
        Position Pos = 4;       // 广播玩家的位置
		int32 ActionData = 5; // 玩家的具体动作
    }
}

// 世界聊天
message Talk
{
    string Content = 1;
}